fixed grid content overflow

--- a/style.css
+++ b/style.css
@@ -127,27 +127,23 @@ p {
 .container {
   --max-width: 100vw;
   --padding: 0.5rem;
-
   width: min(var(--max-width), 100% - 2rem);
   margin-inline: auto;
+  margin-bottom: 2rem;
 }
-
 .even-columns {
   display: grid;
   gap: 1rem;
 }
-
 @media (min-width: 50em) {
   .even-columns {
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 .uneven-columns {
   display: grid;
   gap: 1rem;
 }
-
 @media (min-width: 50em) {
   .uneven-columns {
     grid-template-columns: 1fr 3fr;
@@ -174,11 +170,26 @@ p {
   color: var(--announcement-color);
   padding-block: 0.5rem;
   text-align: center;
-  margin-bottom: var(--size-5);
+  margin: 0 var(--size-3) var(--size-5) var(--size-3);
   font-size: var(--font-size-0);
 }
+.hero-image-grid {
+  overflow: hidden;
+  display: grid;
+  place-items: center;
+  grid-template-areas: "inner-img";
+}
+.hero-image-grid-item {
+  grid-area: inner-img;
+}
 .hero-text {
-  padding: 8rem 2rem 0 4rem;
+  padding: 8rem 2rem 0 0;
+  overflow: hidden;
+}
+@media (min-width: 50em) {
+  .hero-text {
+    padding: 8rem 2rem 0 4rem;
+  }
 }
 .hero-paragraph {
   margin-top: 1rem;
@@ -194,7 +205,6 @@ p {
 .arrow {
   height: 2rem;
   width: 2rem;
-  border: solid red 1px;
 }
 /* navigation */
 .primary-header {
@@ -312,7 +322,6 @@ ul li ul li {
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
 }
-
 .card {
   display: flex;
   flex-direction: column;
@@ -320,13 +329,11 @@ ul li ul li {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
 }
-
 .card > img {
   aspect-ratio: 2/3;
   object-fit: cover;
   width: 100%;
 }
-
 .card > img:first-child {
   border-radius: 0.5rem 0.5rem 0 0;
 }
